add tmux zoom indicator to active window

--- a/tmux/skip/tmux.conf
+++ b/tmux/skip/tmux.conf
@@ -20,7 +20,7 @@ set -g allow-rename off
 # auto-renumber windows
 set -g renumber-windows on
 
-# set default terminal                                                                        
+# set default terminal
 set -g default-terminal "screen-256color"
 
 ################################################################################
@@ -46,5 +46,5 @@ set -g status-right-style "fg=green,bg=black"
 set -g window-status-format " #I: #W "
 
 # how the active window will be styled
-set -g window-status-current-format "[ #I: #W ]"
+set -g window-status-current-format "[ #I: #W ]#{?window_zoomed_flag,#[fg=yellow] (zoom),}"
 set -g window-status-current-style "fg=colour190,bg=colour16"
