add pane numbering to tmux config

--- a/tmux/skip/tmux.conf
+++ b/tmux/skip/tmux.conf
@@ -17,6 +17,10 @@ bind -n C-p previous-window
 # don't rename windows automatically
 set -g allow-rename off
 
+# start window/pane numbering at 1
+set -g base-index 1
+set -wg pane-base-index
+
 # auto-renumber windows
 set -g renumber-windows on
 
