--- a/tmux/skip/tmux.conf
+++ b/tmux/skip/tmux.conf
@@ -19,7 +19,7 @@ set -g allow-rename off
 
 # start window/pane numbering at 1
 set -g base-index 1
-set -wg pane-base-index
+set -wg pane-base-index 1
 
 # auto-renumber windows
 set -g renumber-windows on
