--- a/i3/htpc/i3status.conf
+++ b/i3/htpc/i3status.conf
@@ -14,6 +14,7 @@ general {
 order += "disk /"
 order += "ethernet _first_"
 order += "load"
+order += "memory"
 order += "tztime local"
 
 wireless _first_ {
@@ -37,6 +38,12 @@ tztime local {
 
 load {
         format = "%1min"
+}
+
+memory {
+        format = "%used | %available"
+        threshold_degraded = "1G"
+        format_degraded = "MEMORY < %available"
 }
 
 disk "/" {
