update mem config in i3 status nas

--- a/i3/nas/i3status.conf
+++ b/i3/nas/i3status.conf
@@ -41,7 +41,7 @@ load {
 }
 
 memory {
-        format = "mem (in use: %used) | (free: %available)"
+        format = "mem used: %used / free: %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
