update htpc i3 status

--- a/i3/htpc/i3status.conf
+++ b/i3/htpc/i3status.conf
@@ -37,15 +37,15 @@ tztime local {
 }
 
 load {
-        format = "%1min"
+        format = "load %1min %5min %15min"
 }
 
 memory {
-        format = "%used | %available"
+        format = "mem used: %used / free: %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 disk "/" {
-        format = "%avail"
+        format = "disk free: %avail"
 }
