--- a/i3/htpc/i3status.conf
+++ b/i3/htpc/i3status.conf
@@ -12,7 +12,7 @@ general {
 }
 
 order += "disk /"
-order += "ethernet _first_"
+order += "ethernet br0"
 order += "load"
 order += "memory"
 order += "tztime local"
@@ -22,7 +22,7 @@ wireless _first_ {
         format_down = "W: down"
 }
 
-ethernet _first_ {
+ethernet br0 {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip"
         format_down = "E: down"
