--- a/i3/jdratlif-dev7/i3status.conf
+++ b/i3/jdratlif-dev7/i3status.conf
@@ -11,12 +11,12 @@ general {
         interval = 5
 }
 
-order += "ethernet _first_"
 order += "disk /"
+order += "ethernet _first_"
 order += "load"
 order += "memory"
-order += "tztime utc"
 order += "tztime local"
+order += "tztime utc"
 
 wireless _first_ {
         format_up = "W: (%quality at %essid) %ip"
@@ -33,15 +33,15 @@ battery all {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "disk free: %avail"
 }
 
 load {
-        format = "%1min"
+        format = "load %1min %5min %15min"
 }
 
 memory {
-        format = "%used | %available"
+        format = "mem used: %used / free: %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
