--- a/i3/xenial/i3status.conf
+++ b/i3/xenial/i3status.conf
@@ -12,7 +12,7 @@ general {
 }
 
 order += "disk /"
-order += "ethernet br0"
+order += "ethernet _first_"
 order += "load"
 order += "tztime local"
 
@@ -21,7 +21,7 @@ wireless _first_ {
         format_down = "W: down"
 }
 
-ethernet br0 {
+ethernet _first_ {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip"
         format_down = "E: down"
