--- a/i3/jdratlif-dev7/i3.conf
+++ b/i3/jdratlif-dev7/i3.conf
@@ -78,9 +78,9 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+#bindsym $mod+s layout stacking
+#bindsym $mod+w layout tabbed
+#bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -106,6 +106,18 @@ bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
+# switch to workspace
+bindsym $mod+q workspace 11
+bindsym $mod+w workspace 12
+bindsym $mod+e workspace 13
+bindsym $mod+r workspace 14
+bindsym $mod+t workspace 15
+bindsym $mod+y workspace 16
+bindsym $mod+u workspace 17
+bindsym $mod+i workspace 18
+bindsym $mod+o workspace 19
+bindsym $mod+p workspace 20
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
@@ -117,6 +129,18 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+# move focused container to workspace
+bindsym $mod+Shift+q move container to workspace 11
+bindsym $mod+Shift+w move container to workspace 12
+bindsym $mod+Shift+e move container to workspace 13
+bindsym $mod+Shift+r move container to workspace 14
+bindsym $mod+Shift+t move container to workspace 15
+bindsym $mod+Shift+y move container to workspace 16
+bindsym $mod+Shift+u move container to workspace 17
+bindsym $mod+Shift+i move container to workspace 18
+bindsym $mod+Shift+o move container to workspace 19
+bindsym $mod+Shift+p move container to workspace 20
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -149,7 +173,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+Shift+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
