--- a/i3/jdratlif-dev7/i3.conf
+++ b/i3/jdratlif-dev7/i3.conf
@@ -35,7 +35,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec qterminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+Ctrl+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
@@ -173,7 +173,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-bindsym $mod+Shift+r mode "resize"
+bindsym $mod+Ctrl+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
