--- a/i3/jdratlif-dev7/i3.conf
+++ b/i3/jdratlif-dev7/i3.conf
@@ -31,8 +31,8 @@ font pango:DejaVu Sans 12
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec qterminal
+#bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec qterminal
 
 # kill focused window
 bindsym $mod+Ctrl+q kill
