--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -80,6 +80,29 @@ all:
             snapp-collector.wash2.net.internet2.edu:
             vn.bldc.net.internet2.edu:
             vn.wash2.net.internet2.edu:
+        nwave:
+          children:
+            nwave-bastion:
+              hosts:
+                bastion.bldc.nwave.noaa.gov:
+                bastion.ctc.nwave.noaa.gov:
+                bastion.boul.nwave.noaa.gov:
+            nwave-internal:
+              hosts:
+                sc.bldc.nwave.noaa.gov:
+                sc.ctc.nwave.noaa.gov:
+                sc.boul.nwave.noaa.gov:
+                simp-poller.silv.nwave.noaa.gov:
+                simp-poller.silv2.nwave.noaa.gov:
+                simp-data-silv.ctc.nwave.noaa.gov:
+                simp-comp-silv.ctc.nwave.noaa.gov:
+                snapp.bldc.nwave.noaa.gov:
+                snapp.ctc.nwave.noaa.gov:
+                snapp.boul.nwave.noaa.gov:
+                snapp-portal.bldc.nwave.noaa.gov:
+                tsds.bldc.nwave.noaa.gov:
+                tsds.ctc.nwave.noaa.gov:
+                tsds.boul.nwave.noaa.gov:
     xaiver:
       hosts:
         htpc:
