--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -1,4 +1,129 @@
 ---
 ansible_connection: local
 
+ssh_host_configs:
+  alertmon-mcnc-1:
+    HostName: mon-01.globalnoc.mcnc.org
+  alertmon-mcnc-2:
+    HostName: mon-02.globalnoc.mcnc.org
+  burp:
+    HostName: backup.grnoc.iu.edu
+  burp-ctc:
+    HostName: backup.ictc.ilight.net
+  burp-i2:
+    HostName: backup.ctc.net.internet2.edu
+  cloud-bldc-1:
+    HostName: compute.cloud.bldc.grnoc.iu.edu
+  cloud-bldc-2:
+    HostName: compute2.cloud.bldc.grnoc.iu.edu
+  cloud-bldc-3:
+    HostName: compute3.cloud.bldc.grnoc.iu.edu
+  cloud-bldc-4:
+    HostName: compute4.cloud.bldc.grnoc.iu.edu
+  cloud-bldc-5:
+    HostName: compute5.cloud.bldc.grnoc.iu.edu
+  cloud-ctc-1:
+    HostName: compute.cloud.ctc.grnoc.iu.edu
+  cloud-ctc-2:
+    HostName: compute2.cloud.ctc.grnoc.iu.edu
+  cloud-ctc-3:
+    HostName: compute3.cloud.ctc.grnoc.iu.edu
+  cloud-ctc-4:
+    HostName: compute4.cloud.ctc.grnoc.iu.edu
+  cloud-ctc-5:
+    HostName: compute5.cloud.ctc.grnoc.iu.edu
+  dev:
+    HostName: jdratlif-dev7.ctc.grnoc.iu.edu
+  dns:
+    HostName: db2.grnoc.iu.edu
+  frontend-i2-bldc:
+    HostName: frontend.tsds.bldc.net.internet2.edu
+  frontend-i2-wash2:
+    HostName: frontend.tsds.wash2.net.internet2.edu
+  grafana-cen:
+    HostName: grafana.net.cen.ct.gov
+  grafana-intl:
+    HostName: grafana.intl.grnoc.iu.edu
+  mongo-i2-bldc-1:
+    HostName: mongo1.tsds.bldc.net.internet2.edu
+  mongo-i2-bldc-2:
+    HostName: mongo2.tsds.bldc.net.internet2.edu
+  mongo-i2-bldc-3:
+    HostName: mongo3.tsds.bldc.net.internet2.edu
+  mongo-i2-wash2-1:
+    HostName: mongo1.tsds.wash2.net.internet2.edu
+  mongo-i2-wash2-2:
+    HostName: mongo2.tsds.wash2.net.internet2.edu
+  mongo-i2-wash2-3:
+    HostName: mongo3.tsds.wash2.net.internet2.edu
+  rabbitmq-i2-bldc:
+    HostName: rabbitmq.tsds.bldc.net.internet2.edu
+  rabbitmq-i2-wash2:
+    HostName: rabbitmq.tsds.wash2.net.internet2.edu
+  puppet:
+    HostName: build.grnoc.iu.edu
+  services-i2-bldc:
+    HostName: services.tsds.bldc.net.internet2.edu
+  services-i2-wash2:
+    HostName: services.tsds.wash2.net.internet2.edu
+  simp-comp:
+    HostName: simp-comp.bldc.grnoc.iu.edu
+  simp-data:
+    HostName: simp-data2.bldc.grnoc.iu.edu
+  simp-tsds':
+    HostName: simp-comp.bldc.grnoc.iu.edu
+  simp-poller:
+    HostName: simp-poller.bldc.grnoc.iu.edu
+  simp-i2:
+    HostName: snapp-collector.bldc.net.internet2.edu
+  'snapp-areon-frcy snapp-areon-1':
+    HostName: snapp.frcy.areon.net
+  'snapp-areon-fyvl snapp-areon-2':
+    HostName: snapp.fyvl.areon.net
+  snapp-cen:
+    HostName: snapp.net.cen.ct.gov
+  snapp-i2-bldc:
+    HostName: snapp-collector.bldc.net.internet2.edu
+  snapp-i2-wash2:
+    HostName: snapp-collector.wash2.net.internet2.edu
+  snapp-mcnc-test:
+    HostName: snapp-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-collector:
+    HostName: snapp-collector-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-frontend:
+    HostName: snapp-frontend-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-portal:
+    HostName: snapp-portal-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-rabbit:
+    HostName: snapp-rabbit-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-services:
+    HostName: snapp-services-test-01.globalnoc.mcnc.org
+  snapp-mcnc-test-shard:
+    HostName: snapp-shard-test-01.globalnoc.mcnc.org
+  snapp-mcnc-1:
+    HostName: snapp-collector-01.globalnoc.mcnc.org
+  snapp-mcnc-2:
+    HostName: snapp-collector-02.globalnoc.mcnc.org
+  snapp-ncren:
+    HostName: snapp.ncren.net
+  snapp-onenet:
+    HostName: snapp.noc.onenet.net
+  snapp-oshean:
+    HostName: snapp.oshean.org
+  snapp-services-01:
+    HostName: snapp-services-01.globalnoc.mcnc.org
+  snapp-services-02:
+    HostName: snapp-services-02.globalnoc.mcnc.org
+  tsds-i2-bldc:
+    HostName: services.tsds.bldc.net.internet2.edu
+  tsds-i2-wash2:
+    HostName: services.tsds.wash2.net.internet2.edu
+  vn-bldc:
+    HostName: vn.bldc.net.internet2.edu
+  vn-wash2:
+    HostName: vn.wash2.net.internet2.edu
+  vmx:
+    HostName: 140.182.45.188
+    User: root
+
 use_tmux: true
