add carto hosts to nwave

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -89,6 +89,9 @@ all:
                 bastion.boul.nwave.noaa.gov:
             nwave_internal:
               hosts:
+                carto.bldc.nwave.noaa.gov:
+                carto.ctc.nwave.noaa.gov:
+                carto.boul.nwave.noaa.gov:
                 sc.bldc.nwave.noaa.gov:
                 sc.ctc.nwave.noaa.gov:
                 sc.boul.nwave.noaa.gov:
