add carto onenet host

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -28,6 +28,7 @@ all:
             backup.grnoc.iu.edu:
             backup.ictc.ilight.net:
             build.grnoc.iu.edu:
+            carto.noc.onenet.net:
             db2.grnoc.iu.edu:
             frontend.tsds.bldc.grnoc.iu.edu:
             frontend.tsds.ctc.grnoc.iu.edu:
