--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -1,4 +1,8 @@
 ---
+functions:
+  config_host: |-
+    ansible-playbook main.yaml -b -e "host_override=$1"
+
 ansible_connection: local
 
 ssh_host_configs:
