add config_host function to nwave bastions

--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -4,6 +4,10 @@ aliases:
 
 ansible_connection: local
 
+functions:
+  config_host: |-
+    ansible-playbook main.yaml -b -e "host_override=$1"
+
 ssh_host_configs:
   simp-test-silv:
     HostName: '140.172.80.9'
