--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -36,6 +36,7 @@ all:
             irnc-grm.grnoc.iu.edu:
             jdratlif-dev7.ctc.grnoc.iu.edu:
             mongo-arbiter.areon.net:
+            netsage-probe1.grnoc.iu.edu:
             simp-comp.bldc.grnoc.iu.edu:
             simp-data2.bldc.grnoc.iu.edu:
             simp-poller.bldc.grnoc.iu.edu:
