--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -9,6 +9,8 @@ functions:
     ansible-playbook main.yaml -b -e "host_override=$1"
 
 ssh_host_configs:
+  puppet:
+    HostName: 'dist.nwave.noaa.gov'
   simp-test-silv:
     HostName: '140.172.80.9'
 
