--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = inventory/standard
 hash_behaviour = merge
 host_key_checking = false
+timeout = 60
 vault_identity_list = areon@~/.vault-ids/areon,grnoc@~/.vault-ids/grnoc,i2@~/.vault-ids/i2,xaiver@~/.vault-ids/xaiver
 
 [ssh_connection]
