--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -120,6 +120,7 @@ all:
                 non_ndca_nwave:
                   hosts:
                     awx.ctc.nwave.noaa.gov:
+                    dist.bldc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
     xaiver:
