--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -6,16 +6,33 @@ functions:
     ansible-playbook main.yaml -b -e "host_override=$1"
 
 ssh_host_configs:
-  alertmon-mcnc-1:
-    HostName: mon-01.globalnoc.mcnc.org
-  alertmon-mcnc-2:
-    HostName: mon-02.globalnoc.mcnc.org
+  # AREON hosts
+
+  # SNAPP servers
+  areon-snapp-frcy:
+    HostName: snapp.frcy.areon.net
+  areon-snapp-fyvl:
+    HostName: snapp.fyvl.areon.net
+
+  # CEN hosts
+
+  # portal servers
+  cen-portal:
+    HostName: grafana.net.cen.ct.gov
+
+  # SNAPP servers
+  cen-snapp:
+    HostName: snapp.net.cen.ct.gov
+
+  # internal hosts
+
+  # BURP servers
   burp:
     HostName: backup.grnoc.iu.edu
   burp-ctc:
     HostName: backup.ictc.ilight.net
-  burp-i2:
-    HostName: backup.ctc.net.internet2.edu
+
+  # GlobalNOC cloud
   cloud-bldc-1:
     HostName: compute.cloud.bldc.grnoc.iu.edu
   cloud-bldc-2:
@@ -36,100 +53,167 @@ ssh_host_configs:
     HostName: compute4.cloud.ctc.grnoc.iu.edu
   cloud-ctc-5:
     HostName: compute5.cloud.ctc.grnoc.iu.edu
+
+  # my dev host
   dev:
     HostName: jdratlif-dev7.ctc.grnoc.iu.edu
+
+  # DNS host
   dns:
     HostName: db2.grnoc.iu.edu
-  frontend-i2-bldc:
-    HostName: frontend.tsds.bldc.net.internet2.edu
-  frontend-i2-wash2:
-    HostName: frontend.tsds.wash2.net.internet2.edu
-  grafana-cen:
-    HostName: grafana.net.cen.ct.gov
-  grafana-intl:
+
+  # portal servers
+  portal-intl:
     HostName: grafana.intl.grnoc.iu.edu
-  grafana-onenet:
-    HostName: snapp-portal.noc.onenet.net
-  mongo-i2-bldc-1:
-    HostName: mongo1.tsds.bldc.net.internet2.edu
-  mongo-i2-bldc-2:
-    HostName: mongo2.tsds.bldc.net.internet2.edu
-  mongo-i2-bldc-3:
-    HostName: mongo3.tsds.bldc.net.internet2.edu
-  mongo-i2-wash2-1:
-    HostName: mongo1.tsds.wash2.net.internet2.edu
-  mongo-i2-wash2-2:
-    HostName: mongo2.tsds.wash2.net.internet2.edu
-  mongo-i2-wash2-3:
-    HostName: mongo3.tsds.wash2.net.internet2.edu
-  rabbitmq-i2-bldc:
-    HostName: rabbitmq.tsds.bldc.net.internet2.edu
-  rabbitmq-i2-wash2:
-    HostName: rabbitmq.tsds.wash2.net.internet2.edu
+
+  # puppet master
   puppet:
     HostName: build.grnoc.iu.edu
-  services-i2-bldc:
-    HostName: services.tsds.bldc.net.internet2.edu
-  services-i2-wash2:
-    HostName: services.tsds.wash2.net.internet2.edu
-  simp-comp:
+
+  # SIMP hosts
+  'simp-comp simp-tsds':
     HostName: simp-comp.bldc.grnoc.iu.edu
   simp-data:
     HostName: simp-data2.bldc.grnoc.iu.edu
-  simp-tsds':
-    HostName: simp-comp.bldc.grnoc.iu.edu
   simp-poller:
     HostName: simp-poller.bldc.grnoc.iu.edu
-  simp-i2:
-    HostName: snapp-collector.bldc.net.internet2.edu
-  'snapp-areon-frcy snapp-areon-1':
-    HostName: snapp.frcy.areon.net
-  'snapp-areon-fyvl snapp-areon-2':
-    HostName: snapp.fyvl.areon.net
-  snapp-cen:
-    HostName: snapp.net.cen.ct.gov
-  snapp-i2-bldc:
-    HostName: snapp-collector.bldc.net.internet2.edu
-  snapp-i2-wash2:
-    HostName: snapp-collector.wash2.net.internet2.edu
-  snapp-mcnc-test:
-    HostName: snapp-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-collector:
-    HostName: snapp-collector-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-frontend:
-    HostName: snapp-frontend-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-portal:
-    HostName: snapp-portal-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-rabbit:
-    HostName: snapp-rabbit-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-services:
-    HostName: snapp-services-test-01.globalnoc.mcnc.org
-  snapp-mcnc-test-shard:
-    HostName: snapp-shard-test-01.globalnoc.mcnc.org
-  snapp-mcnc-1:
-    HostName: snapp-collector-01.globalnoc.mcnc.org
-  snapp-mcnc-2:
-    HostName: snapp-collector-02.globalnoc.mcnc.org
-  snapp-ncren:
-    HostName: snapp.ncren.net
-  snapp-onenet:
-    HostName: snapp.noc.onenet.net
-  snapp-oshean:
-    HostName: snapp.oshean.org
-  snapp-services-01:
-    HostName: snapp-services-01.globalnoc.mcnc.org
-  snapp-services-02:
-    HostName: snapp-services-02.globalnoc.mcnc.org
-  tsds-i2-bldc:
-    HostName: services.tsds.bldc.net.internet2.edu
-  tsds-i2-wash2:
-    HostName: services.tsds.wash2.net.internet2.edu
-  vn-bldc:
-    HostName: vn.bldc.net.internet2.edu
-  vn-wash2:
-    HostName: vn.wash2.net.internet2.edu
+
+  # Juniper VMX servers
   vmx:
     HostName: 140.182.45.188
     User: root
+
+  # Internet2 hosts
+
+  # BURP servers
+  'i2-burp i2-burp-bldc i2-burp-wash2':
+    HostName: backup.ctc.net.internet2.edu
+
+  # frontend servers
+  i2-frontend-bldc:
+    HostName: frontend.tsds.bldc.net.internet2.edu
+  i2-frontend-wash2:
+    HostName: frontend.tsds.wash2.net.internet2.edu
+
+  # mongo servers
+  i2-mongo-bldc-1:
+    HostName: mongo1.tsds.bldc.net.internet2.edu
+  i2-mongo-bldc-2:
+    HostName: mongo2.tsds.bldc.net.internet2.edu
+  i2-mongo-bldc-3:
+    HostName: mongo3.tsds.bldc.net.internet2.edu
+
+  i2-mongo-wash2-1:
+    HostName: mongo1.tsds.wash2.net.internet2.edu
+  i2-mongo-wash2-2:
+    HostName: mongo2.tsds.wash2.net.internet2.edu
+  i2-mongo-wash2-3:
+    HostName: mongo3.tsds.wash2.net.internet2.edu
+
+  # rabbit servers
+  i2-rabbit-bldc:
+    HostName: rabbitmq.tsds.bldc.net.internet2.edu
+  i2-rabbit-wash2:
+    HostName: rabbitmq.tsds.wash2.net.internet2.edu
+
+  # TSDS services servers
+  i2-services-bldc:
+    HostName: services.tsds.bldc.net.internet2.edu
+  i2-services-wash2:
+    HostName: services.tsds.wash2.net.internet2.edu
+
+  # SNAPP servers
+  'i2-snapp-bldc i2-simp-bldc':
+    HostName: snapp-collector.bldc.net.internet2.edu
+  'i2-snapp-wash2 i2-simp-wash2':
+    HostName: snapp-collector.wash2.net.internet2.edu
+
+  # Visual Network servers
+  i2-vn-bldc:
+    HostName: vn.bldc.net.internet2.edu
+  i2-vn-wash2:
+    HostName: vn.wash2.net.internet2.edu
+
+  # MCNC hosts
+
+  # AlertMon servers
+  mcnc-alertmon-1:
+    HostName: mon-01.globalnoc.mcnc.org
+  mcnc-alertmon-2:
+    HostName: mon-02.globalnoc.mcnc.org
+
+  # frontend servers
+  mcnc-frontend-1:
+    HostName: snapp-frontend-01.globalnoc.mcnc.org
+  mcnc-frontend-2:
+    HostName: snapp-frontend-02.globalnoc.mcnc.org
+  mcnc-frontend-test:
+    HostName: snapp-frontend-test-01.globalnoc.mcnc.org
+
+  # KVM servers
+  mcnc-kvm-1:
+    HostName: snapp-01.globalnoc.mcnc.org
+  mcnc-kvm-2:
+    HostName: snapp-02.globalnoc.mcnc.org
+  mcnc-kvm-test:
+    HostName: snapp-test-01.globalnoc.mcnc.org
+
+  # mongo servers
+  mcnc-mongo-1:
+    HostName: snapp-shard-01.globalnoc.mcnc.org
+  mcnc-mongo-2:
+    HostName: snapp-shard-02.globalnoc.mcnc.org
+  mcnc-mongo-test:
+    HostName: snapp-shard-test-01.globalnoc.mcnc.org
+
+  # portal servers
+  mcnc-portal-1:
+    HostName: snapp-portal-01.globalnoc.mcnc.org
+  mcnc-portal-2:
+    HostName: snapp-portal-02.globalnoc.mcnc.org
+  mcnc-portal-test:
+    HostName: snapp-portal-test-01.globalnoc.mcnc.org
+
+  # rabbit servers
+  mcnc-rabbit-1:
+    HostName: snapp-rabbit-01.globalnoc.mcnc.org
+  mcnc-rabbit-2:
+    HostName: snapp-rabbit-02.globalnoc.mcnc.org
+  mcnc-rabbit-test:
+    HostName: snapp-rabbit-test-01.globalnoc.mcnc.org
+
+  # TSDS services servers
+  mcnc-services-1:
+    HostName: snapp-services-01.globalnoc.mcnc.org
+  mcnc-services-2:
+    HostName: snapp-services-02.globalnoc.mcnc.org
+  mcnc-services-test:
+    HostName: snapp-services-test-01.globalnoc.mcnc.org
+
+  # SNAPP/SIMP servers
+  'mcnc-snapp-1 mcnc-simp-1':
+    HostName: snapp-collector-01.globalnoc.mcnc.org
+  'mcnc-snapp-2 mcnc-simp-2':
+    HostName: snapp-collector-02.globalnoc.mcnc.org
+  mcnc-snapp-ncren:
+    HostName: snapp.ncren.net
+  'mcnc-snapp-test mcnc-simp-test':
+    HostName: snapp-collector-test-01.globalnoc.mcnc.org
+
+  # OneNet hosts
+
+  # portal servers
+  onenet-portal:
+    HostName: snapp-portal.noc.onenet.net
+
+  # SNAPP servers
+  onenet-snapp:
+    HostName: snapp.noc.onenet.net
+
+  # OSHEAN hosts
+
+  # SNAPP/SIMP servers
+  'oshean-snapp oshean-simp':
+    HostName: snapp.oshean.org
 
 use_tmux: true
