--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -110,6 +110,9 @@ all:
                     carto.bldc.nwave.noaa.gov:
                     carto.ctc.nwave.noaa.gov:
                     carto.boul.nwave.noaa.gov:
+                    flow.bldc.nwave.noaa.gov:
+                    flow.ctc.nwave.noaa.gov:
+                    flow.boul.nwave.noaa.gov:
                     sc.bldc.nwave.noaa.gov:
                     sc.ctc.nwave.noaa.gov:
                     sc.boul.nwave.noaa.gov:
