add webdoc server

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -77,6 +77,7 @@ all:
             snapp-shard-01.globalnoc.mcnc.org:
             snapp-shard-02.globalnoc.mcnc.org:
             snapp-shard-test-01.globalnoc.mcnc.org:
+            webdoc-01.grnoc.iu.edu:
         i2:
           hosts:
             backup.ctc.net.internet2.edu:
