--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -32,9 +32,6 @@ all:
             db-01.grnoc.iu.edu:
             db-02.grnoc.iu.edu:
             db2.grnoc.iu.edu:
-            flow-es-1.bldc.grnoc.iu.edu:
-            flow-es-2.bldc.grnoc.iu.edu:
-            flow-es-3.bldc.grnoc.iu.edu:
             frontend.tsds.bldc.grnoc.iu.edu:
             frontend.tsds.ctc.grnoc.iu.edu:
             io3.bldc.grnoc.iu.edu:
@@ -43,6 +40,7 @@ all:
             mon.bldc.net.cen.ct.gov:
             mon.ehct.net.cen.ct.gov:
             mongo-arbiter.areon.net:
+            netflow-dev-es-master-01.ctc.grnoc.iu.edu:
             netsage-probe1.grnoc.iu.edu:
             nocmon.bldc.grnoc.iu.edu:
             nocmon.ctc.grnoc.iu.edu:
