add host we probably will never use again

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -53,6 +53,7 @@ all:
             snapp.frcy.areon.net:
             snapp.fyvl.areon.net:
             snapp.oshean.org:
+            snappng-test.ncren.net:
             snapp.net.cen.ct.gov:
             snapp.noc.onenet.net:
             snapp-test-01.globalnoc.mcnc.org:
