--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -48,6 +48,7 @@ all:
             nocmon.ctc.grnoc.iu.edu:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
             services.tsds.bldc.grnoc.iu.edu:
+            services.tsds.ctc.grnoc.iu.edu:
             simp-comp.bldc.grnoc.iu.edu:
             simp-data2.bldc.grnoc.iu.edu:
             simp-poller.bldc.grnoc.iu.edu:
