--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -141,6 +141,7 @@ all:
                     dist.bldc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
+                    tools2.silv.nwave.noaa.gov:
     xaiver:
       hosts:
         htpc:
