--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -44,6 +44,7 @@ all:
             mongo-arbiter.areon.net:
             netflow-dev-es-master-01.ctc.grnoc.iu.edu:
             netsage-probe1.grnoc.iu.edu:
+            netsage-portal-sox.grnoc.iu.edu:
             nocmon.bldc.grnoc.iu.edu:
             nocmon.ctc.grnoc.iu.edu:
             rabbitmq.tsds.bldc.grnoc.iu.edu:
