--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -81,6 +81,7 @@ all:
             snapp-shard-02.globalnoc.mcnc.org:
             snapp-shard-test-01.globalnoc.mcnc.org:
             ssh-collector.bldc.grnoc.iu.edu:
+            syslog.grnoc.iu.edu:
             webdoc-01.grnoc.iu.edu:
         i2:
           hosts:
