--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -144,6 +144,7 @@ all:
                     awx.ctc.nwave.noaa.gov:
                     dist.bldc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
+                    ps.ctc.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
