--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -43,6 +43,10 @@ all:
             mon-02.grnoc.iu.edu:
             mongo-arbiter.areon.net:
             netflow-dev-es-master-01.ctc.grnoc.iu.edu:
+            netflow-dev-es-agg-01.bldc.grnoc.iu.edu:
+            netflow-dev-es-agg-01.ctc.grnoc.iu.edu:
+            netflow-dev-es-data-01.bldc.grnoc.iu.edu:
+            netflow-dev-es-data-01.ctc.grnoc.iu.edu:
             netsage-archive.grnoc.iu.edu:
             netsage-probe1.grnoc.iu.edu:
             netsage-portal-sox.grnoc.iu.edu:
