--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -6,12 +6,10 @@ ansible_connection: local
 
 functions:
   config_host: |-
-    ansible-playbook main.yaml -b -e "host_override=$1"
+    ansible-playbook main.yaml -e "host_override=$1"
 
 ssh_host_configs:
   puppet:
     HostName: 'dist.nwave.noaa.gov'
-  simp-test.silv:
-    HostName: '140.172.80.9'
 
 use_tmux: true
