--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -10,7 +10,7 @@ functions:
 
 ssh_host_common_configs:
   ControlMaster: 'auto'
-  ControlPath: '~/.ssh/sockets/%r@h:%p'
+  ControlPath: '~/.ssh/sockets/%r@%h:%p'
 
 ssh_host_configs:
   puppet:
