--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,3 +7,4 @@ vault_identity_list = areon@~/.vault-ids/areon,grnoc@~/.vault-ids/grnoc,i2@~/.va
 
 [ssh_connection]
 pipelining = true
+ssh_args = -F /home/jdratlif/.ssh/config
