--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -149,6 +149,7 @@ all:
                     dist.bldc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
                     ps.ctc.nwave.noaa.gov:
+                    tools-new.bldc:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
