--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -150,8 +150,9 @@ all:
                     dist.bldc.nwave.noaa.gov:
                     perf.dall.nwave.noaa.gov:
                     ps.ctc.nwave.noaa.gov:
-                    tools-new.bldc:
+                    tools-new.bldc.nwave.noaa.gov:
                     tools2.bldc.nwave.noaa.gov:
+                    tools2.ctc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
     xaiver:
       hosts:
