add ansible control master config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,4 +7,4 @@ vault_identity_list = areon@~/.vault-ids/areon,grnoc@~/.vault-ids/grnoc,i2@~/.va
 
 [ssh_connection]
 pipelining = true
-ssh_args = -F /home/jdratlif/.ssh/config
+ssh_args = -F /home/jdratlif/.ssh/config -o ControlMaster=auto -o ControlPersist=60s
