--- a/inventory/standard/group_vars/all.yaml
+++ b/inventory/standard/group_vars/all.yaml
@@ -7,6 +7,8 @@ aliases:
 ansible_become_pass: '{{ ansible_ssh_pass | default("") }}'
 
 ssh_host_common_configs:
+  ControlMaster: 'auto'
+  ControlPath: '~/.ssh/%r@%h:%p'
   ForwardAgent: 'yes'
   ServerAliveCountMax: 3
   ServerAliveInterval: 30
