--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -125,6 +125,7 @@ all:
                     carto.bldc.nwave.noaa.gov:
                     carto.ctc.nwave.noaa.gov:
                     carto.boul.nwave.noaa.gov:
+                    carto-el7-test.bldc.nwave.noaa.gov:
                     carto-el7-test.ctc.nwave.noaa.gov:
                     flow.bldc.nwave.noaa.gov:
                     flow.ctc.nwave.noaa.gov:
