--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -5,6 +5,11 @@ functions:
   config_host: |-
     ansible-playbook main.yaml -e "host_override=$1" --ask-pass
 
+ssh_host_common_configs:
+  ControlMaster: 'auto'
+  ControlPath: '~/.ssh/%r@%h:%p'
+  ForwardAgent: 'yes'
+
 ssh_host_configs:
   # AREON hosts
 
