add bldc awx host

--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -152,6 +152,7 @@ all:
                     tsds.boul.nwave.noaa.gov:
                 non_ndca_nwave:
                   hosts:
+                    awx.bldc.nwave.noaa.gov:
                     awx.ctc.nwave.noaa.gov:
                     dist.bldc.nwave.noaa.gov:
                     mysql.bldc.nwave.noaa.gov:
