--- a/main.yaml
+++ b/main.yaml
@@ -27,10 +27,11 @@
       import_role:
         name: gitconfig
 
-    - name: setup i3
-      import_role:
-        name: i3
-      when: use_i3
+    # disable i3 since we're using mate now
+    # - name: setup i3
+    #   import_role:
+    #     name: i3
+    #   when: use_i3
 
     - name: setup perltidy
       import_role:
