--- a/inventory/standard/group_vars/bastion.yaml
+++ b/inventory/standard/group_vars/bastion.yaml
@@ -2,8 +2,10 @@
 ansible_connection: local
 
 functions:
-  config_host: |-
-    ansible-playbook main.yaml -e "host_override=$1" --ask-pass
+  config_host:
+    - name=$1
+    - shift
+    - ansible-playbook main.yaml -e "host_override=$name" --ask-pass "$@"
 
 ssh_host_common_configs:
   ControlMaster: 'auto'
