--- a/main.yaml
+++ b/main.yaml
@@ -56,6 +56,7 @@
       when: use_vnc
 
     - name: special dev host tasks
+      ansible_become: true
       block:
         - name: increase sudo timeout
           copy:
