--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -5,8 +5,10 @@ aliases:
 ansible_connection: local
 
 functions:
-  config_host: |-
-    ansible-playbook main.yaml -e "host_override=$1"
+  config_host:
+    - name=$1
+    - shift
+    - ansible-playbook main.yaml -e "host_override=$name" "$@"
 
 ssh_host_common_configs:
   ControlMaster: 'auto'
