--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -2,8 +2,7 @@
 aliases:
   rpm6: 'rpm --define="_gpg_name syseng@grnoc.iu.edu"'
   rpm7: 'rpm --define="_gpg_name globalnoc@iu.edu"'
-  ssh_laptop: 'autossh -M 20000 -f -N laptop'
-  ssh_xaiver: 'autossh -M 30000 -f -N xaiver'
+  vpn: 'sudo openconnect --juniper -s "vpn-slice 10.0.0.0/8 awx-test.bldc.grnoc.iu.edu awx.grnoc.iu.edu" -u jdratlif https://vpn.iu.edu/groups'
 
 keychain_bin: '/usr/local/bin/keychain'
 
