--- a/main.yaml
+++ b/main.yaml
@@ -66,7 +66,6 @@
             owner: root
             group: root
             mode: '0440'
-          failed_when: false
         - name: set inotify user watches
           copy:
             content: |
@@ -74,5 +73,7 @@
             dest: /etc/sysctl.d/90-inotify.conf
             owner: root
             group: root
-          failed_when: false
+      rescue:
+        - debug:
+            msg: 'Did you add sudo privileges?'
       when: inventory_hostname == 'jdratlif-dev7.ctc.grnoc.iu.edu'
