--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -2,7 +2,7 @@
 aliases:
   rpm6: 'rpm --define="_gpg_name syseng@grnoc.iu.edu"'
   rpm7: 'rpm --define="_gpg_name globalnoc@iu.edu"'
-  vpn: 'sudo openconnect --juniper -s "vpn-slice 10.0.0.0/8 awx-test.bldc.grnoc.iu.edu awx.grnoc.iu.edu oob2.n13.ctc.grnoc.iu.edu account.bldc.net.internet2.edu account.wash2.net.internet2.edu" -u jdratlif https://vpn.iu.edu/groups'
+  vpn: 'sudo openconnect --juniper -s "vpn-slice 10.0.0.0/8 {{ vpn_hosts | join(' ') }}" -u jdratlif https://vpn.iu.edu/groups'
 
 keychain_bin: '/usr/local/bin/keychain'
 
@@ -23,3 +23,12 @@ ssh_host_configs:
 use_keychain: true
 use_vnc: true
 use_vscode_git: true
+
+vpn_hosts:
+  - account.bldc.net.internet2.edu
+  - account.wash2.net.internet2.edu
+  - awx.grnoc.iu.edu
+  - awx-test.bldc.grnoc.iu.edu
+  - awx.bldc.nwave.noaa.gov
+  - awx.ctc.nwave.noaa.gov
+  - oob2.n13.ctc.grnoc.iu.edu
