pump up the forks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ inventory = inventory/standard
 hash_behaviour = merge
 host_key_checking = false
 timeout = 60
+forks = 25
 
 [ssh_connection]
 pipelining = true
