--- a/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
+++ b/inventory/standard/host_vars/jdratlif-dev7.ctc.grnoc.iu.edu.yaml
@@ -10,6 +10,8 @@ aliases:
 keychain_bin: '/usr/local/bin/keychain'
 
 ssh_host_common_configs:
+  ControlMaster: 'auto'
+  ControlPath: '~/.ssh/%r@%h:%p'
   ForwardAgent: 'yes'
 
 ssh_host_configs:
