--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -22,6 +22,7 @@ all:
                     irnc-grm.grnoc.iu.edu:
                     jdratlif-dev7.ctc.grnoc.iu.edu:
                     mongo-arbiter.areon.net:
+                    mtu-test.bldc.grnoc.iu.edu:
                     netflow-dev-es-master-01.ctc.grnoc.iu.edu:
                     netflow-dev-es-agg-01.bldc.grnoc.iu.edu:
                     netflow-dev-es-agg-01.ctc.grnoc.iu.edu:
