--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -165,8 +165,11 @@ all:
                     snapp.bldc.nwave.noaa.gov:
                     snapp.ctc.nwave.noaa.gov:
                     snapp.boul.nwave.noaa.gov:
+                    snapp-arbiter.boul.nwave.noaa.gov:
                     snapp-portal.bldc.nwave.noaa.gov:
+                    snapp-arbiter.boul.nwave.noaa.gov:
                     snapp-services.bldc.nwave.noaa.gov:
+                    snapp-services.ctc.nwave.noaa.gov:
                     snapp-shard.bldc.nwave.noaa.gov:
                     snapp-shard.ctc.nwave.noaa.gov:
                     tsds.bldc.nwave.noaa.gov:
