--- a/inventory/standard/group_vars/nwave_bastion.yaml
+++ b/inventory/standard/group_vars/nwave_bastion.yaml
@@ -19,7 +19,9 @@ ssh_host_configs:
     HostName: 'mysql.bldc.nwave.noaa.gov'
   puppet:
     HostName: 'dist.nwave.noaa.gov'
-  carto-el7-test.ctc.nwave.noaa.gov:
-    HostName: '140.182.54.38'
+  snapp-collector.bldc.nwave.noaa.gov:
+    HostName: '140.182.54.24'
+  snapp-collector.ctc.nwave.noaa.gov:
+    HostName: '140.182.54.25'
 
 use_tmux: true
