--- a/inventory/standard/hosts.yaml
+++ b/inventory/standard/hosts.yaml
@@ -197,3 +197,6 @@ all:
                     tools2.bldc.nwave.noaa.gov:
                     tools2.ctc.nwave.noaa.gov:
                     tools2.silv.nwave.noaa.gov:
+    xaiver:
+      hosts:
+        htpc.technoplaza.net:
