--- a/inventory/standard/group_vars/xaiver.yaml
+++ b/inventory/standard/group_vars/xaiver.yaml
@@ -1,7 +1,7 @@
 ---
 gitconfig:
   name: 'John Ratliff'
-  email: 'jdratlif@globalnoc.iu.edu'
+  email: 'john@technoplaza.net'
 
 use_vnc: true
 use_vscode_git: true
