--- a/inventory/standard/group_vars/xaiver.yaml
+++ b/inventory/standard/group_vars/xaiver.yaml
@@ -3,5 +3,50 @@ gitconfig:
   name: 'John Ratliff'
   email: 'john@technoplaza.net'
 
+ssh_host_configs:
+  noaa-bldc:
+    Hostname: 'bastion.bldc.nwave.noaa.gov'
+    PKCS11Provider: '/usr/lib/x86_64-linux-gnu/pkcs11/opensc-pkcs11.so'
+    LocalForward: '5950 localhost:5950'
+    LocalForward: '5951 localhost:5951'
+    LocalForward: '5952 localhost:5952'
+    LocalForward: '5953 localhost:5953'
+    LocalForward: '5954 localhost:5954'
+    LocalForward: '5955 localhost:5955'
+    LocalForward: '5956 localhost:5956'
+    LocalForward: '5957 localhost:5957'
+    LocalForward: '5958 localhost:5958'
+    LocalForward: '5959 localhost:5959'
+
+ssh_host_configs:
+  noaa-ctc:
+    Hostname: 'bastion.ctc.nwave.noaa.gov'
+    PKCS11Provider: '/usr/lib/x86_64-linux-gnu/pkcs11/opensc-pkcs11.so'
+    LocalForward: '5950 localhost:5950'
+    LocalForward: '5951 localhost:5951'
+    LocalForward: '5952 localhost:5952'
+    LocalForward: '5953 localhost:5953'
+    LocalForward: '5954 localhost:5954'
+    LocalForward: '5955 localhost:5955'
+    LocalForward: '5956 localhost:5956'
+    LocalForward: '5957 localhost:5957'
+    LocalForward: '5958 localhost:5958'
+    LocalForward: '5959 localhost:5959'
+
+ssh_host_configs:
+  noaa-boul:
+    Hostname: 'bastion.boul.nwave.noaa.gov'
+    PKCS11Provider: '/usr/lib/x86_64-linux-gnu/pkcs11/opensc-pkcs11.so'
+    LocalForward: '5950 localhost:5950'
+    LocalForward: '5951 localhost:5951'
+    LocalForward: '5952 localhost:5952'
+    LocalForward: '5953 localhost:5953'
+    LocalForward: '5954 localhost:5954'
+    LocalForward: '5955 localhost:5955'
+    LocalForward: '5956 localhost:5956'
+    LocalForward: '5957 localhost:5957'
+    LocalForward: '5958 localhost:5958'
+    LocalForward: '5959 localhost:5959'
+
 use_vnc: true
 use_vscode_git: true
